SyntacticAnalyzer/tests/fail/atributo-ctor-metodo04.java
class ok {
	static this met() {

	}
}
